// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Datapoint > should match its default snapshot 1`] = `
<div>
  <div
    class="text-base"
  >
    <!-- @slot Label context.  -->
    
    label
    
  </div>
  <div
    class="flex gap-2"
  >
    <div
      class="font-bold text-3xl text-black dark:text-white"
    >
      <!-- @slot Datapoint context.  -->
      
      4000
      
    </div>
    <div
      class="text-base mt-auto"
    >
      <!-- @slot Context context.  -->
      
      context
      
    </div>
  </div>
</div>
`;

exports[`Datapoint > should match its variant green, size sm, label, and context slots snapshot 1`] = `
<div>
  <div
    class="text-base"
  >
    <!-- @slot Label context.  -->
    
    label
    
  </div>
  <div
    class="flex gap-2"
  >
    <div
      class="font-bold text-lg text-green-600 dark:text-green-400"
    >
      <!-- @slot Datapoint context.  -->
      
      2000
      
    </div>
    <div
      class="text-base mt-auto"
    >
      <!-- @slot Context context.  -->
      
      context
      
    </div>
  </div>
</div>
`;
